read only Expand/Collapse fix

--- a/ui/src/app/document/containers/docedit/docedit-page.component.css
+++ b/ui/src/app/document/containers/docedit/docedit-page.component.css
@@ -22,10 +22,6 @@
   margin-right: 0.5em;
 }
 
-.readonly-doc {
-	pointer-events: none;
-}
-
 .mat-drawer {
   padding-left: 30px;
 	padding-bottom: 30px;
